# Tubes2_ML

./: .gitignore  README.md  requirements-macos.txt  requirements.txt
notebooks/: CNN.ipynb  LSTM.ipynb
src/BASE/: base_model.py
src/BASE/layers/: activation_layer.py  dropout_layer.py
src/BASE/utils/: evaluation.py  weight_loader.py
src/models/: pyproject.toml
src/models/src/models/base_model/layers/: average_pooling_2d_layer.py  conv_2d_layer.py  dense_layer.py  embedding_layer.py  flatten_layer.py  max_pooling_2d_layer.py
src/models/src/models/base_model/utils/: nusax_loader.py  visualization.py
src/models/src/models/cnn/: cnn.py  cnn_keras.py
src/models/src/models/lstm/: embedding_layer.py  experiments.py  lstm_layer.py  lstm_model.py
src/models/src/models/rnn/: experiment.py  rnn_layer.py  rnn_model.py
src/notebooks/: CNN.ipynb  LSTM.ipynb  RNN.ipynb  bcn-1-testing.ipynb  bcn-2-layer_count.ipynb  bcn-3-filter_count.ipynb  bcn-4-filter_size.ipynb  bcn-5-pooling_type.ipynb  bcn-6-keras_vs_scratch.ipynb
src/notebooks/RNN/: RNN_Comparison.ipynb  RNN_LayerCount.ipynb
src/output/results/: conv_2_layers_evaluation.json  conv_3_layers_evaluation.json  conv_4_layers_evaluation.json  filters_16_32_64_evaluation.json  filters_32_32_32_evaluation.json  filters_32_32_evaluation.json  filters_32_64_128_evaluation.json  filters_32_evaluation.json  filters_64_128_256_evaluation.json  kernels_3_3_3_evaluation.json  kernels_5_5_5_evaluation.json  kernels_7_7_7_evaluation.json  pooling_average_evaluation.json  pooling_max_evaluation.json
(+3 files in other folders)
